@@ -4,7 +4,7 @@
       "David Golden <dagolden@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300029, CPAN::Meta::Converter version 2.120921",
+   "generated_by" : "Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "apache_2_0"
    ],
@@ -46,6 +46,7 @@
             "Dist::Zilla::Plugin::CheckExtraTests" : "0",
             "Dist::Zilla::Plugin::CheckMetaResources" : "0.001",
             "Dist::Zilla::Plugin::CheckPrereqsIndexed" : "0.002",
+            "Dist::Zilla::Plugin::ContributorsFromGit" : "0.004",
             "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
             "Dist::Zilla::Plugin::Git::NextVersion" : "0",
             "Dist::Zilla::Plugin::InsertCopyright" : "0.001",
@@ -72,6 +73,7 @@
             "Pod::Weaver" : "3.101635",
             "Pod::Weaver::Config::Assembler" : "0",
             "Pod::Weaver::Plugin::WikiDoc" : "0",
+            "Pod::Weaver::Section::Contributors" : "0.001",
             "Pod::Weaver::Section::Support" : "1.001",
             "Pod::Wordlist::hanekomu" : "1.121370",
             "Test::Portability::Files" : "0.06",
@@ -100,11 +102,11 @@
    "provides" : {
       "Dist::Zilla::PluginBundle::DAGOLDEN" : {
          "file" : "lib/Dist/Zilla/PluginBundle/DAGOLDEN.pm",
-         "version" : "0.041"
+         "version" : "0.042"
       },
       "Pod::Weaver::PluginBundle::DAGOLDEN" : {
          "file" : "lib/Pod/Weaver/PluginBundle/DAGOLDEN.pm",
-         "version" : "0.041"
+         "version" : "0.042"
       }
    },
    "release_status" : "stable",
@@ -120,6 +122,11 @@
          "web" : "https://github.com/dagolden/dist-zilla-pluginbundle-dagolden"
       }
    },
-   "version" : "0.041"
+   "version" : "0.042",
+   "x_contributors" : [
+      "Christian Walde <walde.christian@googlemail.com>",
+      "Eric Johnson <eric.git@iijo.org>",
+      "Philippe Bruhat (BooK) <book@cpan.org>"
+   ]
 }
 
