@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - Add ContributorsFromGit plugin and Contributors Pod Weaver section
+
 0.041     2013-02-21 16:14:21 America/New_York
 
     - Make 'no_critic' work as advertised
